tests/ui/attributes/no-mangle-closure.stderr
error: the `no_mangle` attribute cannot be used on closures
  --> $DIR/no-mangle-closure.rs:9:8
   |
LL |     (#[no_mangle] || y.0[0])()
   |        ^^^^^^^^^
   |
   = help: the `no_mangle` attribute can be applied to functions, methods, and statics

error: aborting due to 1 previous error

